<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:paddingTop="50dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/editTextLeft"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:maxLength="20"/>

        <EditText
            android:id="@+id/editTextRight"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:maxLength="20"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">
            <CheckBox
                android:id="@+id/checkbox_concat"
                android:text="@string/checkbox_concat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <CheckBox
                android:id="@+id/checkbox_invert"
                android:text="@string/checkbox_invert"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">
            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <RadioButton
                    android:id="@+id/radio_sum"
                    android:text="@string/radio_sum"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:enabled="false"/>
                <RadioButton
                    android:id="@+id/radio_diff"
                    android:text="@string/radio_diff"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:enabled="false"/>
            </RadioGroup>
        </LinearLayout>
    </LinearLayout>

    <ToggleButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/toggle_mode"
        android:textOn="@string/toggle_text_on"
        android:textOff="@string/toggle_text_off"/>
    <Button
        android:id="@+id/button_execute"
        android:text="@string/button_execute"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/result_title"
        android:textSize="20dp"
        android:textColor="@color/design_default_color_primary_dark"/>
    <TextView
        android:id="@+id/text_result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/switch_calendar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/switch_show"/>
    <CalendarView
        android:id="@+id/calendar"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="invisible"/>

</LinearLayout>